# mongo-odbc-driver

./: .deepsource.toml  .gitignore  Cargo.toml  DEVELOPER.md  README.md  RELEASE.md  cargo.tree  evergreen.yml  mongo-odbc-downloads_template.json  mongodb-odbc-downloads_template.json
constants/: Cargo.toml
constants/src/: lib.rs
core/: Cargo.toml
core/src/: bson_type_info.rs  cluster_type.rs  col_metadata.rs  collections.rs  conn.rs  databases.rs  definitions.rs  err.rs  error.rs  ffi_wrapper.rs  fields.rs  foreign_keys.rs  json_schema.rs  lib.rs  load_library.rs  mock_query.rs  mongosqltranslate.rs  mongosqltranslate_data_types.rs  odbc_uri.rs  oidc_auth.rs  primary_keys.rs  query.rs  resultset.rs  run_command.rs  stmt.rs  table_types.rs  test_config.rs  type_info.rs  util.rs
core/src/bson_type_info/: mod.rs  simple_type_info.rs  standard_type_info.rs  type_info.rs
core/src/schema_mode/: mod.rs  simple_bson_type_info.rs  standard_bson_type_info.rs  type_info.rs
core/src/type_info/: mod.rs  mongo_type_info.rs  simple_bson_type_info.rs  standard_bson_type_info.rs
core/src/util/: decimal128.rs  dsn.rs  mod.rs  registry.rs  test_connection.rs
cstr/: Cargo.toml
cstr/src/: lib.rs
definitions/: Cargo.toml
definitions/src/: attributes.rs  bulk_operation.rs  c_data_type.rs  desc.rs  diag_type.rs  fetch_orientation.rs  functions.rs  indicator.rs  info_type.rs  interval.rs  lib.rs  nullability.rs  param_type.rs  row_status.rs  sql_data_type.rs
definitions/tests/: lib.rs
docs/: overview.md
evergreen/: create-expansions.sh  decompress_testdata_files.sh  eap.yml  generate_licenses.sh  make_docs.sh
examples/: Makefile  README.md
examples/advanced_odbc_helper/: Makefile  README.md  common.c  common.h  connection_info_utility  connection_info_utility.c  data_type_handler  data_type_handler.c  error_analyzer  error_analyzer.c  metadata_explorer  metadata_explorer.c  mongodb_x509_connector  mongodb_x509_connector.c  test_examples.sh
examples/direct_api/: Makefile  direct_mongo_connector  direct_mongo_connector.c
examples/hybrid_api/: Makefile  hybrid_mongo_connector  hybrid_mongo_connector.c
examples/odbc_helper/: test_x509_helper.sh
file_dbg_macros/: Cargo.toml
file_dbg_macros/src/: lib.rs
include/: mongo_odbc_ffi.h
installer/dmg/: build-dmg.sh  distribution.xml  manually-format-dmg.sh
installer/dmg/resources/: LICENSE.rtf  WELCOME.rtf
installer/dmg/scripts/: postinstall
installer/msi/: BinaryFragment.wxs  FeatureFragment.wxs  LICENSE.rtf  LicensingFragment.wxs  Product.wxs  README.rtf  build-msi.ps1  make-active.bat
integration-test/: Cargo.toml
integration-test/src/: main.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs
integration_test/src/test_runner/: mod.rs  test_generator_util.rs
integration_test/tests/: bind_cols_tests.rs  cluster_type_test.rs  connection_tests.rs  disconnect_tests.rs  free_and_cancel_tests.rs  function_tests.rs  get_data_tests.rs  get_info_tests.rs  mongosqltranslate_tests.rs  odbc_2_tests.rs  power_bi_tests.rs  prepared_statement_tests.rs  query_tests.rs
integration_test/tests/common/: mod.rs
logger/: Cargo.toml
logger/src/: lib.rs
macos_postinstall/: Cargo.toml
macos_postinstall/src/: main.rs
mock_mongosqltranslate/: Cargo.toml
mock_mongosqltranslate/src/: lib.rs
odbc/: Cargo.toml  build.rs
odbc-sys/: Cargo.toml
odbc-sys/src/: lib.rs  sql_data_type.rs
odbc/src/: api.rs  definitions.rs  errors.rs  handles.rs  lib.rs  tests.rs  util.rs
odbc/src/api/: bind_col_tests.rs  cancel_tests.rs  col_attr_describe_tests.rs  col_attr_tests.rs  connect_attr_tests.rs  data.rs  data_tests.rs  definitions.rs  diag.rs  driver_connect_tests.rs  env_attr_tests.rs  errors.rs  free_stmt_tests.rs  functions.rs  get_diag_field_tests.rs  get_diag_rec_tests.rs  get_info_tests.rs  get_type_info_tests.rs  mod.rs  odbc_uri.rs  panic_safe_exec_tests.rs  stmt_attr_tests.rs  tmp_test.rs  util.rs
odbc/src/handles/: definitions.rs  mod.rs  tests.rs  unit.rs
odbc/tests/: connection_tests.rs  integration_tests.rs  metadata_tests.rs  power_bi_tests.rs  query_tests.rs
odbc/tests/common/: mod.rs
odbc/tests/metadata_tests/: sqlTables.yml
odbc/tests/metadata_tests_def/: sqlTables.yml
odbc/tests/tests_gen/: mod.rs
resources/: run_adf.sh  start_local_mdb.sh  third_party_header.txt
resources/download-center/: mongo-odbc-downloads.json  mongo-odbc-downloads_template.json
resources/integration_test/: csv_to_yml.py
resources/integration_test/config/: adf_config.yaml
resources/integration_test/odbc2/: queries.yaml
resources/integration_test/testdata/: adf_db_config.json  adl_db_config.json  calcs.yml  integration_test.yml
resources/integration_test/tests/: columns_all.yml  columns_all_filter.yml  columns_column_filter.yml  columns_db_filter.yml  columns_no_filter.yml  functions.yaml  functions.yml  queries.yaml  sqltables.yml
resources/ssdlc/: GHSA-4grx-2x9w-596c.analysis.json  GHSA-c38w-74pg-36hr.analysis.json  mongo-odbc-driver_compliance_report_template.md
rfc8252_http_server/: Cargo.toml
rfc8252_http_server/src/: lib.rs
rfc8252_http_server/templates/: OIDCAcceptedTemplate.html  OIDCErrorTemplate.html  OIDCNotFoundTemplate.html  oidc_server_html_templates.json
setup/: cleanup.reg  cleanup_driver.reg  cleanup_dumps_collection.reg  iodbc.ini  iodbcinst.ini  odbc.ini  odbcinst.ini  setup.reg  setupDSN.reg  setup_dumps_collection.reg
shared_sql_utils/: Cargo.toml
shared_sql_utils/src/: driver_settings.rs  dsn.rs  lib.rs  odbcinst.rs
widechar/: Cargo.toml
widechar/src/: lib.rs
win_setupgui/: Cargo.toml
win_setupgui/src/: config.rs  gui.rs  lib.rs
win_setupgui/src/api/: functions.rs
win_setupgui/src/gui/: config.rs  mod.rs  remove.rs
