[workspace]

members = [
    "constants",
    "cstr",
    "odbc",
    "definitions",
    "core",
    "integration_test",
    "win_setupgui",
    "shared_sql_utils",
    "logger",
    "macos_postinstall",
    "rfc8252_http_server",
]


[workspace.lints.clippy]
unnecessary_cast = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
ptr_as_ptr = "deny"
useless_conversion = "deny"

[workspace.dependencies]
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver", rev = "ac0f721b06cfdd88b7a79ac28a825f23d25077c7", features = ["aws-auth", "dns-resolver", "gssapi-auth"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
lazy_static = "1"
logger = { path = "logger" }
log = "0.4"
regex = "1"
num-traits = "0.2"
tokio = "1"
num-derive = "0.4"
bson = { git = "https://github.com/mongodb/bson-rust", branch = "2.15.x" }
itertools = "0.14"
once_cell = "1"

[patch.crates-io]
bson = { git = "https://github.com/mongodb/bson-rust", branch = "2.15.x" }

[profile.release]
debug = true
