[workspace]

members = [
    "constants",
    "cstr",
    "odbc",
    "definitions",
    "core",
    "integration_test",
    "win_setupgui",
    "shared_sql_utils",
    "logger",
    "macos_postinstall",
    "rfc8252_http_server",
]


[workspace.lints.clippy]
unnecessary_cast = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
ptr_as_ptr = "deny"
useless_conversion = "deny"

[workspace.dependencies]
mongodb = { version = "=3.3.0", features = ["aws-auth", "dns-resolver", "gssapi-auth"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
lazy_static = "1"
logger = { path = "logger" }
log = "0"
regex = "1"
num-traits = "0"
tokio = "1"
num-derive = "0"
bson = "2"
itertools = "0"
once_cell = "1"

[profile.release]
debug = true
