[package]
name = "constants"
version = "2.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@mongodb.com>",
]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
cargo_toml = "0.15.2"
anyhow = "*"
serde_json = "1.0.64"
