[package]
name = "constants"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@mongodb.com>",
]
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
cargo_toml = "0"
anyhow = "*"
serde_json = { workspace = true }
