[package]
name = "mongo-odbc-core"
version = "0.0.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>"]
edition = "2021"

[dependencies]
odbc-sys = "0.21.2"
bson = "2"
thiserror = "1"
constants = { path = "../constants" }
regex = "1.6.0"
serde = { version = "1", features = ["derive"] }
itertools = "0.10.4"
lazy_static = "1.4.0"
likely_stable = "0.1.2"
num-traits = "0.2.14"
num-derive = "0.3.3"

[dependencies.mongodb]
version = "2.1"
default-features = false
features = ["sync"]
