[package]
name = "mongo-odbc-core"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@mongodb.com>",
]
edition = "2021"

[dependencies]
definitions = { path = "../definitions" }
bson = "2"
thiserror = "1"
constants = { path = "../constants" }
regex = "1.6.0"
serde = { version = "1", features = ["derive"] }
itertools = "0.10.4"
lazy_static = "1.4.0"
likely_stable = "0.1.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
chrono = "0.4.24"
cstr = { path = "../cstr" }
fancy-regex = "0.11.0"
shared_sql_utils = { path = "../shared_sql_utils" }
log = "0.4.14"
mongodb = "2.8.2"
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "net"] }
futures = "0.3"

# [dependencies.mongodb]
# version = "2.8.2"
# default-features = false
# features = ["tokio-sync"]


[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_System_Search",
] }

[features]
bad_host = []

[lib]
name = "mongo_odbc_core"
crate-type = ["cdylib", "lib"]
