[package]
name = "mongo-odbc-core"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@mongodb.com>",
]
edition = "2021"

[dependencies]
mongosql = { git = "https://github.com/mongodb/mongosql.git", branch = "main", package = "mongosql" }
agg-ast = { git = "https://github.com/mongodb/mongosql.git", branch = "main", package = "agg-ast" }
definitions = { path = "../definitions" }
bson = { workspace = true }
thiserror = { workspace = true }
constants = { path = "../constants" }
regex = { workspace = true }
serde = { workspace = true }
serde_stacker = "0.1"
itertools = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
cstr = { path = "../cstr" }
fancy-regex = "0.11.0"
shared_sql_utils = { path = "../shared_sql_utils" }
log = { workspace = true }
mongodb = { workspace = true }
# Do NOT change these features without consulting with other team members.
# The features are used to control the behavior of tokio. Tokio is unsafe to use
# across ABI boundaries in any other runtime but current_thread
tokio = { workspace = true, features = [
    "rt",
    "sync",
    "io-util",
    "macros",
    "net",
] }
futures = "0.3"
openidconnect = "3"
open = "5"
reqwest = { version = "0", features = ["blocking"] }
rfc8252_http_server = { path = "../rfc8252_http_server" }
once_cell = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_System_Search",
] }

[features]
garbage_collect = []

[lib]
name = "mongo_odbc_core"
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
