[package]
name = "definitions"
version = "0.0.0"
build = "build.rs"
edition = "2021"

[dependencies]
cstr = { path = "../cstr" }

[features]
default = ["odbc_version_3_80"]
static = []
iodbc = []

odbc_version_3_50 = []
odbc_version_3_80 = ["odbc_version_3_50"]
odbc_version_4 = ["odbc_version_3_80"]

