[package]
name = "definitions"
version = "0.0.0"
build = "build.rs"
edition = "2021"

[dependencies]
cstr = { path = "../cstr" }
num-traits = "0.2.14"
num-derive = "0.4.2"

[features]
default = ["odbc_version_3_80"]
static = []
iodbc = []

odbc_version_3_50 = []
odbc_version_3_80 = ["odbc_version_3_50"]
odbc_version_4 = ["odbc_version_3_80"]
