[package]
name = "integration_test"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.4"
thiserror = "1"
lazy_static = "1"
definitions = { path = "../definitions", default-features = false }
cstr = { path = "../cstr" }
constants = { path = "../constants" }
shared_sql_utils = { path = "../shared_sql_utils" }
logger = { path = "../logger" }
log = "0.4"
regex = "1"
num-traits = "0.2.14"
num-derive = "0.3.3"
mongodb = "2.8.2"
tailcall = "1.0"
# Do NOT change these features without consulting with other team members. 
# The features are used to control the behavior of tokio. Tokio is unsafe to use
# across ABI boundaries in any other runtime but current_thread
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "net"] }


[features]
result_set = []
evergreen_tests = []
