[package]
name = "integration_test"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.4"
thiserror = { workspace = true }
lazy_static = { workspace = true }
definitions = { path = "../definitions", default-features = false }
cstr = { path = "../cstr" }
constants = { path = "../constants" }
mongo-odbc-core = { path = "../core" }
shared_sql_utils = { path = "../shared_sql_utils" }
logger = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
num-traits = { workspace = true }
mongodb = { workspace = true }
tailcall = "1.0"
# Do NOT change these features without consulting with other team members.
# The features are used to control the behavior of tokio. Tokio is unsafe to use
# across ABI boundaries in any other runtime but current_thread
tokio = { workspace = true, features = [
    "rt",
    "sync",
    "io-util",
    "macros",
    "net",
] }


[features]
cluster_type_tests = []
result_set = []
evergreen_tests = []
eap = []
