[package]
name = "logger"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
log4rs = { version = "1.2.0", features = ["background_rotation"] }
shared_sql_utils = { path = "../shared_sql_utils" }
constants = { path = "../constants" }
directories = "5.0"
lazy_static = { workspace = true }
