[package]
name = "mongo-odbc-driver"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Varsha Subrahmanyam <varsha.subrahmanyam@mongodb.com>",
    "Nathan Leniz <nathan.leniz@gmail.com>",
]
edition = "2021"

[dependencies]
thiserror = "1"
lazy_static = "1.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
regex = "1.6.0"
chrono = "=0.4.22"                                # pinning to =0.4.22 TODO: SQL-1345: bump chrono and use non-deprecated methods
constants = { path = "../constants" }
mongo-odbc-core = { path = "../core" }
file_dbg_macros = { path = "../file_dbg_macros" }
cstr = { path = "../cstr" }
function_name = "0.3.0"
serde_json = "1.0.68"
odbc-sys = "0.21.2"


[dependencies.mongodb]
version = "2.3"
default-features = false
features = ["tokio-sync"]

[dependencies.bson]
version = "2.0.1"
features = ["chrono-0_4"]


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.21"
thiserror = "1"

[lib]
name = "atsql"
crate-type = ["cdylib", "lib"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
