[package]
name = "mongo-odbc-driver"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Varsha Subrahmanyam <varsha.subrahmanyam@mongodb.com>",
    "Nathan Leniz <nathan.leniz@gmail.com>",
]
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
thiserror = "1"
lazy_static = "1.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
regex = "1.6.0"
chrono = "0.4.24"
constants = { path = "../constants" }
mongo-odbc-core = { path = "../core" }
cstr = { path = "../cstr" }
function_name = "0.3.0"
serde_json = "1.0.68"
definitions = { path = "../definitions" }
shared_sql_utils = { path = "../shared_sql_utils" }
logger = { path = "../logger" }
log = "0.4.17"
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "net"] }
mongodb = "2.8.2"

[dependencies.bson]
version = "2.0.1"
features = ["chrono-0_4"]

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.21"
thiserror = "1"


[lib]
name = "atsql"
crate-type = ["cdylib", "lib"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
