[package]
name = "mongo-odbc-driver"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Natacha Bagnard <natacha.bagnard@mongodb.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Varsha Subrahmanyam <varsha.subrahmanyam@mongodb.com>",
    "Nathan Leniz <nathan.leniz@gmail.com>",
]
edition = "2021"

[dependencies]
thiserror = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
chrono = "0"
constants = { path = "../constants" }
mongo-odbc-core = { path = "../core" }
cstr = { path = "../cstr" }
function_name = "0"
serde_json = { workspace = true }
definitions = { path = "../definitions" }
shared_sql_utils = { path = "../shared_sql_utils" }
logger = { workspace = true }
log = { workspace = true }
# Do NOT change these features without consulting with other team members.
# The features are used to control the behavior of tokio. Tokio is unsafe to use
# across ABI boundaries in any other runtime but current_thread
tokio = { workspace = true, features = [
    "rt",
    "sync",
    "io-util",
    "macros",
    "net",
] }
mongodb = { workspace = true }

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }

[dependencies.bson]
version = "2"
features = ["chrono-0_4"]


[dev-dependencies]
serde = { workspace = true }
serde_yaml = "0"
thiserror = { workspace = true }


[lib]
name = "atsql"
crate-type = ["cdylib", "lib"]

[target.'cfg(windows)'.build-dependencies]
winres = "0"

[lints]
workspace = true
