[package]
name = "rfc8252_http_server"
version = "0.0.0"
authors = [
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@gmail.com>",
]
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { workspace = true, features = ["full"] }
askama = "0"
once_cell = { workspace = true }

[dev-dependencies]
reqwest = { version = "0", features = ["blocking"] }
