[package]
name = "win_setupgui"
version = "0.0.0"
authors = [
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@mongodb.com>",
]
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_System_Search",
] }
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
constants = { path = "../constants" }
cstr = { path = "../cstr" }
function_name = "0.3.0"
shared_sql_utils = { path = "../shared_sql_utils" }
thiserror = { workspace = true }
log = { workspace = true }

[lib]
name = "atsqls"
crate-type = ["cdylib", "lib"]
